# django-formify

./: CHANGELOG.md  README.md  pyproject.toml
docs/source/: component_design.md  conf.py  formify_helper.md  get_started.md  getting_started.md  index.rst  install.md  layout.md  tags.md
src/django_formify/: app_settings.py  apps.py  utils.py
src/django_formify/components/formify/tw/: field_error.html  field_error.py  field_error_help_text.html  field_error_help_text.py  field_help_text.html  field_help_text.py  field_label.html  field_label.py  field_wrapper.py
src/django_formify/components/tw/: field_wrapper.py
src/django_formify/tailwind/: formify_helper.py  layout.py
src/django_formify/templates/formify/tailwind/: checkbox_input.html  checkbox_select_multiple.html  common_field.html  errors.html  errors_formset.html  field_errors_block.html  file_input.html  form_tag.html  help_text.html  help_text_and_errors.html  label.html  radio_select.html  select.html  select_option.html
src/django_formify/templates/formify/tailwind/components/: button.html  div.html  field_wrapper.html  fieldset.html  horizontal_field_wrapper.html
src/django_formify/templatetags/: formify.py
tests/: conftest.py  test_form_helper.py  test_layout.py  test_tags.py
tests/testapp/: forms.py  models.py
