[tool.poetry]
name = "django-formify"
version = "0.0.6"
description = "Django-Formify seamlessly integrates Tailwind CSS styles into your Django forms for a modern look."
authors = ["Michael Yin <michaelyin@accordbox.com>"]
license = "MIT"
homepage = "https://github.com/rails-inspire-django/django-formify"
readme = "README.md"
packages = [{ include = "django_formify", from = "src" }]

[tool.poetry.urls]
Changelog = "https://github.com/rails-inspire-django/django-formify/releases"

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.0"
django-viewcomponent = ">=1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
